created header section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section id="header">
         <nav>
             <ul class="menu">
-                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#header" class="active">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Courses</a></li>
                 <li><a href="#">Projects</a></li>
@@ -24,7 +24,7 @@
             <h4>Hello</h4>
             <h1>I am <span>Steven</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, doloribus.</p>
-            <a class="header-btn" href="#">Contact</a>
+            <a class="header-btn" href="#contact">Contact</a>
         </div>
     </section>
 
