--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="menu">
                 <li><a href="#header" class="active">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#">Courses</a></li>
+                <li><a href="#courses">Courses</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
@@ -36,6 +36,38 @@
                 illum laboriosam maxime veniam laborum officia? Numquam, porro deserunt minima omnis saepe commodi odit
                 excepturi!</p>
             <button class="header-btn">Read More</button>
+        </div>
+    </section>
+
+    <section id="courses">
+        <div class="courses-heading">
+            <h1>Previous Work</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, voluptatibus.</p>
+        </div>
+        <div class="courses-container">
+            <div class="courses-box">
+                <div class="courses-text">
+                    <h4>Web Development</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                    <a class="header-btn" href="#">Read More</a>
+                </div>
+            </div>
+
+            <div class="courses-box">
+                <div class="courses-text">
+                    <h4>Prog in Rust</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                    <a class="header-btn" href="#">Read More</a>
+                </div>
+            </div>
+
+            <div class="courses-box">
+                <div class="courses-text">
+                    <h4>Soft. Engineering</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                    <a class="header-btn" href="#">Read More</a>
+                </div>
+            </div>
         </div>
     </section>
 </body>
