added projects section

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+</html>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -16,8 +17,8 @@
                 <li><a href="#header" class="active">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#courses">Courses</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div class="header-heading">
@@ -41,9 +42,10 @@
 
     <section id="courses">
         <div class="courses-heading">
-            <h1>Previous Work</h1>
+            <h1>Courses</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, voluptatibus.</p>
         </div>
+
         <div class="courses-container">
             <div class="courses-box">
                 <div class="courses-text">
@@ -70,4 +72,39 @@
             </div>
         </div>
     </section>
+
+    <section id="projects">
+        <div class="courses-heading">
+            <h1>Projects</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        </div>
+
+        <div class="courses-container">
+            <div class="courses-box">
+                <div class="courses-text">
+                    <h4>Kingdom of Frupal</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                    <a class="header-btn" href="#">Read More</a>
+                </div>
+            </div>
+
+            <div class="courses-box">
+                <div class="courses-text">
+                    <h4>Random Map Generator</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                    <a class="header-btn" href="#">Read More</a>
+                </div>
+            </div>
+
+            <div class="courses-box">
+                <div class="courses-text">
+                    <h4>Carnival Vendor Brochure</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                    <a class="header-btn" href="#">Read More</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
+</html>
