added contact form

--- a/index.html
+++ b/index.html
@@ -105,6 +105,19 @@
             </div>
         </div>
     </section>
+
+    <section id="contact">
+        <div class="courses-heading">
+            <h1>Contact Me</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        </div>
+        <form>
+            <input type="text" placeholder="Name" />
+            <input type="email" placeholder="Email" />
+            <textarea placeholder="Message here"></textarea>
+            <input type="submit" value="Continue" />
+        </form>
+    </section>
 </body>
 
 </html>
