added javascript to navbar

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <section id="header">
         <nav>
             <ul class="menu">
-                <li><a href="#header" class="active">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#courses">Courses</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="header"><a href="#header">Home</a></li>
+                <li class="about"><a href="#about">About</a></li>
+                <li class="courses"><a href="#courses">Courses</a></li>
+                <li class="projects"><a href="#projects">Projects</a></li>
+                <li class="contact"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div class="header-heading">
@@ -118,6 +118,7 @@
             <input type="submit" value="Continue" />
         </form>
     </section>
+    <script src="./active-menu.js"></script>
 </body>
 
 </html>
