fixed active menu not loading on page load and replaced header with home

--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <script defer src="./active-menu.js"></script>
 </head>
 
 <body>
-    <section id="header">
+    <section id="home">
         <nav>
             <ul class="menu">
-                <li class="header"><a href="#header">Home</a></li>
+                <li class="home active"><a href="#home">Home</a></li>
                 <li class="about"><a href="#about">About</a></li>
                 <li class="courses"><a href="#courses">Courses</a></li>
                 <li class="projects"><a href="#projects">Projects</a></li>
                 <li class="contact"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <div class="header-heading">
+        <div class="home-heading">
             <h4>Hello</h4>
             <h1>I am <span>Steven</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, doloribus.</p>
-            <a class="header-btn" href="#contact">Contact</a>
+            <a class="home-btn" href="#contact">Contact</a>
         </div>
     </section>
 
@@ -36,7 +37,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae vero tempore ab, ipsam aliquid alias
                 illum laboriosam maxime veniam laborum officia? Numquam, porro deserunt minima omnis saepe commodi odit
                 excepturi!</p>
-            <button class="header-btn">Read More</button>
+            <button class="home-btn">Read More</button>
         </div>
     </section>
 
@@ -51,7 +52,7 @@
                 <div class="courses-text">
                     <h4>Web Development</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
-                    <a class="header-btn" href="#">Read More</a>
+                    <a class="home-btn" href="#">Read More</a>
                 </div>
             </div>
 
@@ -59,7 +60,7 @@
                 <div class="courses-text">
                     <h4>Prog in Rust</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
-                    <a class="header-btn" href="#">Read More</a>
+                    <a class="home-btn" href="#">Read More</a>
                 </div>
             </div>
 
@@ -67,7 +68,7 @@
                 <div class="courses-text">
                     <h4>Soft. Engineering</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
-                    <a class="header-btn" href="#">Read More</a>
+                    <a class="home-btn" href="#">Read More</a>
                 </div>
             </div>
         </div>
@@ -84,7 +85,7 @@
                 <div class="courses-text">
                     <h4>Kingdom of Frupal</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-                    <a class="header-btn" href="#">Read More</a>
+                    <a class="home-btn" href="#">Read More</a>
                 </div>
             </div>
 
@@ -92,7 +93,7 @@
                 <div class="courses-text">
                     <h4>Random Map Generator</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-                    <a class="header-btn" href="#">Read More</a>
+                    <a class="home-btn" href="#">Read More</a>
                 </div>
             </div>
 
@@ -100,7 +101,7 @@
                 <div class="courses-text">
                     <h4>Carnival Vendor Brochure</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-                    <a class="header-btn" href="#">Read More</a>
+                    <a class="home-btn" href="#">Read More</a>
                 </div>
             </div>
         </div>
@@ -118,7 +119,6 @@
             <input type="submit" value="Continue" />
         </form>
     </section>
-    <script src="./active-menu.js"></script>
 </body>
 
 </html>
