changed heading to header

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 </head>
 
 <body>
-    <section id="heading">
+    <section id="header">
         <nav>
             <ul class="menu">
-                <li class="heading active"><a href="#heading">Home</a></li>
+                <li class="header active"><a href="#header">header</a></li>
                 <li class="about"><a href="#about">About</a></li>
                 <li class="courses"><a href="#courses">Courses</a></li>
                 <li class="projects"><a href="#projects">Projects</a></li>
                 <li class="contact"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <div class="heading-heading">
+        <div class="header-heading">
             <h4>Hello</h4>
             <h1>I am <span>Steven</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, doloribus.</p>
-            <a class="heading-btn" href="#contact">Contact</a>
+            <a class="header-btn" href="#contact">Contact</a>
         </div>
     </section>
 
@@ -37,7 +37,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae vero tempore ab, ipsam aliquid alias
                 illum laboriosam maxime veniam laborum officia? Numquam, porro deserunt minima omnis saepe commodi odit
                 excepturi!</p>
-            <button class="heading-btn">Read More</button>
+            <button class="header-btn">Read More</button>
         </div>
     </section>
 
@@ -52,7 +52,7 @@
                 <div class="courses-text">
                     <h4>Web Development</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
-                    <a class="heading-btn" href="#">Read More</a>
+                    <a class="header-btn" href="#">Read More</a>
                 </div>
             </div>
 
@@ -60,7 +60,7 @@
                 <div class="courses-text">
                     <h4>Prog in Rust</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
-                    <a class="heading-btn" href="#">Read More</a>
+                    <a class="header-btn" href="#">Read More</a>
                 </div>
             </div>
 
@@ -68,7 +68,7 @@
                 <div class="courses-text">
                     <h4>Soft. Engineering</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
-                    <a class="heading-btn" href="#">Read More</a>
+                    <a class="header-btn" href="#">Read More</a>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
                 <div class="courses-text">
                     <h4>Kingdom of Frupal</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-                    <a class="heading-btn" href="#">Read More</a>
+                    <a class="header-btn" href="#">Read More</a>
                 </div>
             </div>
 
@@ -93,7 +93,7 @@
                 <div class="courses-text">
                     <h4>Random Map Generator</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-                    <a class="heading-btn" href="#">Read More</a>
+                    <a class="header-btn" href="#">Read More</a>
                 </div>
             </div>
 
@@ -101,7 +101,7 @@
                 <div class="courses-text">
                     <h4>Carnival Vendor Brochure</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-                    <a class="heading-btn" href="#">Read More</a>
+                    <a class="header-btn" href="#">Read More</a>
                 </div>
             </div>
         </div>
