--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section id="header">
         <nav>
             <ul class="menu">
-                <li class="header active"><a href="#header">header</a></li>
+                <li class="header active"><a href="#header">Home</a></li>
                 <li class="about"><a href="#about">About</a></li>
                 <li class="courses"><a href="#courses">Courses</a></li>
                 <li class="projects"><a href="#projects">Projects</a></li>
