fixed issue where menu buttons weren't active on page

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <section id="header">
         <nav>
             <ul class="menu">
-                <li class="menu-btn active"><a href="#header">Home</a></li>
-                <li class="menu-btn"><a href="#about">About</a></li>
-                <li class="menu-btn"><a href="#courses">Courses</a></li>
-                <li class="menu-btn"><a href="#projects">Projects</a></li>
-                <li class="menu-btn"><a href="#contact">Contact</a></li>
+                <li class="header active"><a href="#header">Home</a></li>
+                <li class="about"><a href="#about">About</a></li>
+                <li class="courses"><a href="#courses">Courses</a></li>
+                <li class="projects"><a href="#projects">Projects</a></li>
+                <li class="contact"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div class="header-heading">
