--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script defer src="./active-menu.js"></script>
 </head>
 
@@ -15,11 +16,11 @@
     <section id="header">
         <nav>
             <ul class="menu">
-                <li class="header active"><a href="#header">Home</a></li>
-                <li class="about"><a href="#about">About</a></li>
-                <li class="courses"><a href="#courses">Courses</a></li>
-                <li class="projects"><a href="#projects">Projects</a></li>
-                <li class="contact"><a href="#contact">Contact</a></li>
+                <li class="header active"><a class="menu-btn" href="#header">Home</a></li>
+                <li class="about"><a class="menu-btn" href="#about">About</a></li>
+                <li class="courses"><a class="menu-btn" href="#courses">Courses</a></li>
+                <li class="projects"><a class="menu-btn" href="#projects">Projects</a></li>
+                <li class="contact"><a class="menu-btn" href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div class="header-heading">
