added custom styling for different screen sizes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2>Welcome!</h2>
             <h1>I am <span>Steven</span></h1>
             <p>I tinker with code, mess with code, and make stuff with code.</p>
-            <a class="header-btn" href="#contact">Contact</a>
+            <a class="button" href="#contact">Contact</a>
         </div>
         <img src="headshot.png" alt="Photo of Steven Van">
     </section>
@@ -49,24 +49,24 @@
     </section>
 
     <section id="courses">
-        <div class="courses-heading">
+        <div class="section-heading">
             <h1>Courses</h1>
             <p>Classes taken recently</p>
         </div>
 
-        <div class="courses-container">
-            <div class="courses-box">
+        <div class="item-gallery">
+            <div class="item-box">
                 <img src="web-dev.png" alt="Generic image for web development">
-                <div class="courses-text">
+                <div class="item-text">
                     <h2>Introduction to Web Development</h2>
                     <p>Introductory class that teachers modern techniques frontend web development using Html, CSS, and
                         Javascript</p>
                 </div>
             </div>
 
-            <div class="courses-box">
+            <div class="item-box">
                 <img src="rust.jpg" alt="Logo of Rust language">
-                <div class="courses-text">
+                <div class="item-text">
                     <h2>Programming in Rust</h2>
                     <p>Learning to program in a language that combines solid bare-metal performances with modern
                         language features that encourages high-quality code.
@@ -74,9 +74,9 @@
                 </div>
             </div>
 
-            <div class="courses-box">
+            <div class="item-box">
                 <img src="stats.png" alt="Generic bar graph">
-                <div class="courses-text">
+                <div class="item-text">
                     <h2>Appl. Stat/Engr and Sci I</h2>
                     <p>Sample spaces, probability, counting measures, discrete and continuous probability models,
                         sampling distributions, and computer applications.
@@ -87,49 +87,49 @@
     </section>
 
     <section id="projects">
-        <div class="courses-heading">
+        <div class="section-heading">
             <h1>Projects</h1>
             <p>Available projects on Github</p>
         </div>
 
-        <div class="courses-container">
-            <div class="courses-box">
+        <div class="item-gallery">
+            <div class="item-box">
                 <img src="frupal.png" alt="Game display of Kingdom of Frupal">
-                <div class="courses-text">
+                <div class="item-text">
                     <h2>Kingdom of Frupal</h2>
                     <p>Text-based roguelike RPG where the player must find the Royal Diamond to win the game</p>
                     <p>(contributions: implemented file import/export, procedural map generation)</p>
                 </div>
-                <a class="header-btn" alt="Git repo for Kingdom of Frupal"
+                <a class="button" alt="Git repo for Kingdom of Frupal"
                     href="https://github.com/markaveliii/FRUPAL">Repo</a>
             </div>
 
-            <div class="courses-box">
+            <div class="item-box">
                 <img src="randmap.png" alt="Result of randomly generated map on Roblox">
-                <div class="courses-text">
+                <div class="item-text">
                     <h2>Random Map Generator</h2>
                     <p>A script to generate random layouts of rooms in different orientations. This is written
                         in Lua and is used in a platform called Roblox Studio.
                     </p>
                 </div>
-                <a class="header-btn" alt="Random Map Generator Git repo"
+                <a class="button" alt="Random Map Generator Git repo"
                     href="https://github.com/stevengvan/RandMapGen">Repo</a>
             </div>
 
-            <div class="courses-box">
+            <div class="item-box">
                 <img src="code.png" alt="Part of the source code">
-                <div class="courses-text">
+                <div class="item-text">
                     <h2>Carnival Vendor Brochure</h2>
                     <p>Brochure management system to automate carnival vendor organization and placement order.</p>
                 </div>
-                <a class="header-btn" atl="Carnival Vendor Brochure Git repo"
+                <a class="button" atl="Carnival Vendor Brochure Git repo"
                     href="https://github.com/stevengvan/carnival-vendor-brochure/blob/master/src/Main.java">Repo</a>
             </div>
         </div>
     </section>
 
     <section id="contact">
-        <div class="courses-heading">
+        <div class="section-heading">
             <h1>Contact Me</h1>
         </div>
         <form>
