made tweaks on item box sizing and added list of assignments

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                     <h2>Introduction to Web Development</h2>
                     <p>Introductory class that teachers modern techniques frontend web development using Html, CSS, and
                         Javascript</p>
+                    <h3><u>Past Assignments</u></h3>
+                    <ul class="item-list">
+                        <li>Final Project: Web Portfolio</li>
+                        <li>Homework 5: Fetch API and JQuery</li>
+                    </ul>
                 </div>
             </div>
 
@@ -70,6 +75,11 @@
                     <p>Learning to program in a language that combines solid bare-metal performances with modern
                         language features that encourages high-quality code.
                     </p>
+                    <h3><u>Past Assignments</u></h3>
+                    <ul class="item-list">
+                        <li>Final Project: NightLife</li>
+                        <li>Homework 5: Sublists Pairs</li>
+                    </ul>
                 </div>
             </div>
 
@@ -80,6 +90,11 @@
                     <p>Sample spaces, probability, counting measures, discrete and continuous probability models,
                         sampling distributions, and computer applications.
                     </p>
+                    <h3><u>Past Assignments</u></h3>
+                    <ul class="item-list">
+                        <li>Homework 6: Joint Probability Distributions</li>
+                        <li>Homework 5: Continuous Random Variable</li>
+                    </ul>
                 </div>
             </div>
         </div>
